--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -126,9 +126,9 @@
     <dimen name="switchbar_subsettings_margin_start">72dp</dimen>
     <dimen name="switchbar_subsettings_margin_end">16dp</dimen>
 
-    <dimen name="search_bar_margin">16dp</dimen>
+    <dimen name="search_bar_margin">26dp</dimen>
 
-    <dimen name="search_bar_height">48dp</dimen>
+    <dimen name="search_bar_height">50dp</dimen>
     <dimen name="search_bar_corner_radius">24.0dp</dimen>
     <dimen name="search_bar_text_size">16dp</dimen>
     <dimen name="search_bar_card_elevation">2dp</dimen>
@@ -430,4 +430,6 @@
 
     <!-- Text padding for EmptyTextSettings -->
     <dimen name="empty_text_padding">24dp</dimen>
+
+    <dimen name="styx_settings_search_bar_height">200dp</dimen>
 </resources>
